ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/search2.less
.header {
  .cmp-search {

    &__input {

      &:focus-visible {
        outline: 1px solid var(--border-common);
        background: var(--search-bg-active);
        color: var(--search-text);
      }
    }

    &__results {
      padding: 0.5rem 0;
      outline: 1px solid var(--border-common);
      border: none;

      &:empty {
        display: none !important;
      }
    }

    &__item {
      padding: 0.5rem;
      font-size: var(--body-font-size);
      line-height: var(--body-font-line-height);
      font-weight: 400;

      &:hover {
        background: var(--search-results-bg-hover);
        &__item-mark{
          background: none;
          color: var(--primary-color);
        }
      }
    }

    &__item-mark {
      background: none;
    }
  }
}

html#adobeguides-dark-contrast {
  .header {
    .cmp-search {
      &__item {
        color: var(--yellow-color);
        &:hover{
          background: var(--dark-grey);
        }
      }

      &__item-mark {
        background: none;
        color: var(--yellow-color);
      }
      &__input {
        &:focus-visible {
          outline: 1px solid var(--border-common);
          background: var(--search-bg);
          color: var(--search-text-active);
        }
      }
    }
  }
}

@media (max-width: 1023px) {
  .header {
    .cmp-search {
      position: absolute;
      left: 0;
      right: 0;
      margin-top: 2rem;
      background: var(--common-bg);
      border: 1px solid var(--border-common);
      border-radius: 0 0 0.75rem 0.75rem;
      padding: 0.75rem 1rem 1rem;

      &__icon {
        left: 0.5rem;
        top: 0.38rem;
      }

      &__input {
        position: relative;
        margin-top: 0;
        left: unset;
        width: 100%;
        border-radius: 0.5rem;
        border: 1px solid var(--border-common);
      }

      &__clear-icon {
        left: unset;
        top: 6px;
        right: 8px;
      }

      &__results {
        position: relative;
        left: auto;
        width: auto;
        margin-top: 0.25rem;
        border-radius: 0.5rem;
      }
    }
    .cmp-search__field{
      border-radius: 0.5rem;
      &:focus{
        border: 1px solid var(--primary-dark);
      }
    }
  }
}

@media (min-width: 1024px) {
  .header {
    .cmp-search {
      position: relative;
      display: block;

      &__field {
        position: relative;
        height: 2rem;
      }

      &__input {
        height: 100%;
        width: 338px;
        padding: 0.375rem 0.5rem 0.375rem 2rem;
        border-radius: 0.5rem;
        background: var(--search-bg);
        border: none;
        color: var(--search-text-color);
        font-size: var(--body-font-size);
        font-weight: 500;
        line-height: var(--body-font-line-height);
        margin-top: 0;
        display: block;
        position: unset;
        box-shadow: none;
      }

      &__icon {
        display: block;
        background-image: url("/content/dam/guides/common-images/icons/search.svg");
        background-size: contain;
        width: 20px;
        height: 20px;
        pointer-events: none;
        left: 0.5rem;
        top: 0.375rem;
        margin-right: 0.375rem;
      }

      &__results {
        display: none;
        border-radius: 0.5rem;
        position: absolute;
        left: 0;
        min-width: 100%;
        margin-top: 0.25rem;
      }

      &__clear-icon {
        cursor: pointer;
        position: absolute;
        top: 0.5rem;
        right: 0.5rem;
        width: 1rem;
        height: 1rem;
        left: auto;
      }
    }
  }
}

.custom-search-container {
  margin-bottom: 0.7rem;
}

